k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadlink-fe
  namespace: loadlink-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadlink-fe
  template:
    metadata:
      labels:
        app: loadlink-fe
    spec:
      containers:
      - name: loadlink-fe
        image: LOADLINK_FE_IMAGE  # Placeholder; Jenkins replaces
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: loadlink-fe-svc
  namespace: loadlink-ns
spec:
  selector:
    app: loadlink-fe
  ports:
  - port: 3000
    targetPort: 3000
