k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loadlink-ingress
  namespace: loadlink-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: loadlink-be-svc
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loadlink-fe-svc
            port:
              number: 3000
